--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@ layout: compress
                 {{ content }}
             </section>
         {% include footer.html %}
+<script id="dsq-count-scr" src="//jobinsonworks.disqus.com/count.js" async></script>        
     </body>
 </html>
 
